deploy: 5083002da264d0b5093156f2e884bf1bb0ecffa4

--- a/slides/11_wireframing.html
+++ b/slides/11_wireframing.html
@@ -227,9 +227,48 @@ width="250" alt="high-fidelity" />
 height="550" /></p>
 </section>
 
+<section>
 <section id="sitemap" class="title-slide slide level1">
 <h1>sitemap</h1>
-
+<div class="columns">
+<div class="column" style="width:25;">
+<ul>
+<li>similar to a wireframe map but for web sites</li>
+<li>for design, documentation</li>
+<li>also for machine processing
+<ul>
+<li>for web scrawlers</li>
+<li>sitemap.xml</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:75%;">
+<p><img data-src="figures/sitemap_wbs.svg" width="600" /></p>
+</div>
+</div>
+</section>
+<section id="sitemap-as-wireframe" class="slide level2">
+<h2>sitemap as wireframe</h2>
+<p><img data-src="figures/sitemap_wireframe.drawio.svg"
+height="550" /></p>
+</section></section>
+<section id="some-free-tools" class="title-slide slide level1">
+<h1>some free tools</h1>
+<ul>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a></li>
+<li><a href="https://app.diagrams.net/">draw.io</a></li>
+<li><a href="https://quant-ux.com/">Quant-UX</a>
+<ul>
+<li>open source (self-hosted) or free as a service</li>
+</ul></li>
+<li><a href="https://wireframe.cc/">wireframe.cc</a>
+<ul>
+<li>only public and no export in free plan</li>
+</ul></li>
+<li><a href="https://www.figma.com/">Figma</a>
+<ul>
+<li>has a limited free plan</li>
+</ul></li>
+</ul>
 </section>
 
 <section id="references" class="title-slide slide level1">
