deploy: de4b7219badecb5787d94dfbd7608f8a6a57a6bb

--- a/print.html
+++ b/print.html
@@ -357,8 +357,8 @@ Principle</a>
 </ul>
 </li>
 <li><a href="https://fsharpforfunandprofit.com/posts/recipe-part2/">Railway oriented
-programming</a>
--by Scott Wlaschin</li>
+programming</a> -
+by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
@@ -382,6 +382,8 @@ Example</a></li>
 <li><a href="https://www.uxdesigninstitute.com/blog/what-is-wireframing/">What is wireframing? A complete
 guide</a> -
 by Louise Bruton</li>
+<li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
+Prototypes</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
