--- a/slides/11_wireframing.html
+++ b/slides/11_wireframing.html
@@ -86,6 +86,7 @@ data-cites="bruton2022what">[1]</span></p>
 https://www.figma.com/resource-library/what-is-wireframing/-->
 </section>
 
+<section>
 <section id="wireframing" class="title-slide slide level1">
 <h1>wireframing</h1>
 <div class="columns">
@@ -112,7 +113,18 @@ width="275" /></p>
 data-cites="bruton2022what">[1]</span></p>
 </div>
 </section>
-
+<section id="design-prototyping" class="slide level2">
+<h2>design prototyping</h2>
+<figure>
+<img
+data-src="figures/borrowed/td-design-thinking-non-linear-process.webp"
+height="475" alt="Interaction Design Foundation [2] | CC BY-SA 4.0" />
+<figcaption aria-hidden="true">Interaction Design Foundation <span
+class="citation" data-cites="ixdf2019what">[2]</span> | <a
+href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA
+4.0</a></figcaption>
+</figure>
+</section></section>
 <section>
 <section id="types-of-wireframes" class="title-slide slide level1">
 <h1>types of wireframes</h1>
@@ -203,7 +215,10 @@ alt="mid-fidelity" />
 <li>created using a digital tool</li>
 <li>feature actual typography, detailed features, design elements
 (logos) and menu systems</li>
-<li>may presented as initial prototypes</li>
+<li>may presented as initial prototypes
+<ul>
+<li>interactive, clickable</li>
+</ul></li>
 </ul>
 <div class="text-smaller">
 <p>source: <span class="citation"
@@ -217,14 +232,15 @@ width="250" alt="high-fidelity" />
 </figure>
 </div>
 </div>
-</section>
-<section id="prototype" class="slide level2">
-<h2>prototype</h2>
+<!-- ## prototype -->
 </section></section>
 <section id="wireframe-map" class="title-slide slide level1">
 <h1>wireframe map</h1>
 <p><img data-src="figures/user_statistics/wireframe_map_2.drawio.svg"
-height="550" /></p>
+height="500" /></p>
+<div class="text-smaller">
+<p>shows user flow, ~ user story map flow</p>
+</div>
 </section>
 
 <section>
@@ -246,8 +262,8 @@ height="550" /></p>
 </div>
 </div>
 </section>
-<section id="sitemap-as-wireframe" class="slide level2">
-<h2>sitemap as wireframe</h2>
+<section id="sitemap-as-wireframe-map" class="slide level2">
+<h2>sitemap as wireframe map</h2>
 <p><img data-src="figures/sitemap_wireframe.drawio.svg"
 height="550" /></p>
 </section></section>
@@ -281,6 +297,15 @@ Bruton, <span>“What is wireframing? A complete guide.”</span> <a href="
                     " class="uri">
                    https://www.uxdesigninstitute.com/blog/what-is-wireframing/
 </a>, 08-Sep-2022.</div>
+</div>
+<div id="ref-ixdf2019what" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[2] </div><div
+class="csl-right-inline">Interaction Design Foundation, <span>“What are
+prototypes?”</span> <a href="
+                   https://www.interaction-design.org/literature/topics/prototypes
+                    " class="uri">
+                   https://www.interaction-design.org/literature/topics/prototypes
+</a>, 17-Oct-2019.</div>
 </div>
 </div>
 </section>
