--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -356,8 +356,8 @@ Principle</a>
 </ul>
 </li>
 <li><a href="https://fsharpforfunandprofit.com/posts/recipe-part2/">Railway oriented
-programming</a>
--by Scott Wlaschin</li>
+programming</a> -
+by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
@@ -381,6 +381,8 @@ Example</a></li>
 <li><a href="https://www.uxdesigninstitute.com/blog/what-is-wireframing/">What is wireframing? A complete
 guide</a> -
 by Louise Bruton</li>
+<li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
+Prototypes</a></li>
 </ul>
 
                     </main>
