--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -361,6 +361,7 @@ by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
+<li><a href="/software-engineering/slides/summary_week05.html">week 5 summary</a></li>
 <li><a href="/software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li><a href="/software-engineering/slides/10_planning.html">implementation
 planning</a></li>
