--- a/print.html
+++ b/print.html
@@ -362,6 +362,7 @@ by Scott Wlaschin</li>
 </ul>
 <h2 id="week-6"><a class="header" href="#week-6">week 6</a></h2>
 <ol>
+<li><a href="lectures//software-engineering/slides/summary_week05.html">week 5 summary</a></li>
 <li><a href="lectures//software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li><a href="lectures//software-engineering/slides/10_planning.html">implementation
 planning</a></li>
