--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -365,7 +365,6 @@ by Scott Wlaschin</li>
 <li><a href="/software-engineering/slides/09_interfaces.html">interfaces</a></li>
 <li><a href="/software-engineering/slides/10_planning.html">implementation
 planning</a></li>
-<li><a href="/software-engineering/slides/11_wireframing.html">wireframing</a></li>
 </ol>
 <h3 id="readings-5"><a class="header" href="#readings-5">readings</a></h3>
 <ul>
@@ -379,6 +378,15 @@ by Dan Radigan</li>
 Estimates</a></li>
 <li><a href="https://stackoverflow.com/help/minimal-reproducible-example">How to create a Minimal, Reproducible
 Example</a></li>
+</ul>
+<h2 id="week-7"><a class="header" href="#week-7">week 7</a></h2>
+<ol>
+<li><a href="/software-engineering/slides/summary_week06.html">week 6 summary</a></li>
+<li><a href="/software-engineering/slides/11_wireframing.html">wireframing</a></li>
+<li>clean code</li>
+</ol>
+<h3 id="readings-6"><a class="header" href="#readings-6">readings</a></h3>
+<ul>
 <li><a href="https://www.uxdesigninstitute.com/blog/what-is-wireframing/">What is wireframing? A complete
 guide</a> -
 by Louise Bruton</li>
