deploy: 8607914158c99c3a75e2a2ee742db5132c8e9e28

--- a/print.html
+++ b/print.html
@@ -384,7 +384,7 @@ Example</a></li>
 <ol>
 <li><a href="lectures//software-engineering/slides/summary_week06.html">week 6 summary</a></li>
 <li><a href="lectures//software-engineering/slides/11_wireframing.html">wireframing</a></li>
-<li>clean code</li>
+<li><a href="lectures//software-engineering/slides/12_clean_code.html">clean code</a></li>
 </ol>
 <h3 id="readings-6"><a class="header" href="#readings-6">readings</a></h3>
 <ul>
