deploy: 3eb3b1e064fffda53e9c8a1687408f7770bdfb3c

--- a/slides/summary_week06.html
+++ b/slides/summary_week06.html
@@ -393,6 +393,7 @@ href="https://commons.wikimedia.org/wiki/File:GanttChartAnatomy.svg">Wikipedia</
 </div>
 </section>
 
+<section>
 <section id="assign-responsibilities-and-tasks"
 class="title-slide slide level1">
 <h1>assign responsibilities and tasks</h1>
@@ -428,7 +429,27 @@ should have an assignee</p>
 data-cites="paquet2019when">[2]</span></p>
 </div>
 </section>
-
+<section id="dependencies" class="slide level2">
+<h2>dependencies</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<div class="r-stack">
+<div class="fragment fade-out" data-fragment-index="1">
+<p><img data-src="figures/team_dependency_1.drawio.svg"
+width="450" /></p>
+</div>
+<div class="fragment fade-in" data-fragment-index="1">
+<p><img data-src="figures/team_dependency_2.drawio.svg"
+width="450" /></p>
+</div>
+</div>
+</div><div class="column fragment" data-fragment-index="2"
+style="width:50%;">
+<p><img data-src="figures/borrowed/CouplingVsCohesion.svg"
+width="350" /></p>
+</div>
+</div>
+</section></section>
 <section>
 <section id="allocate-resources" class="title-slide slide level1">
 <h1>allocate resources</h1>
