--- a/slides/10_planning.html
+++ b/slides/10_planning.html
@@ -557,6 +557,7 @@ data-cites="bentley1985programming">[3]</span></p>
 </div>
 <!-- ![](figures/borrowed/estimating_time_2x.png){height=300} -->
 </section></section>
+<section>
 <section id="assign-responsibilities-and-tasks"
 class="title-slide slide level1">
 <h1>assign responsibilities and tasks</h1>
@@ -592,7 +593,27 @@ should have an assignee</p>
 data-cites="paquet2019when">[4]</span></p>
 </div>
 </section>
-
+<section id="dependencies" class="slide level2">
+<h2>dependencies</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
+<div class="r-stack">
+<div class="fragment fade-out" data-fragment-index="1">
+<p><img data-src="figures/team_dependency_1.drawio.svg"
+width="450" /></p>
+</div>
+<div class="fragment fade-in" data-fragment-index="1">
+<p><img data-src="figures/team_dependency_2.drawio.svg"
+width="450" /></p>
+</div>
+</div>
+</div><div class="column fragment" data-fragment-index="2"
+style="width:50%;">
+<p><img data-src="figures/borrowed/CouplingVsCohesion.svg"
+width="350" /></p>
+</div>
+</div>
+</section></section>
 <section>
 <section id="allocate-resources" class="title-slide slide level1">
 <h1>allocate resources</h1>
