--- a/index.html
+++ b/index.html
@@ -393,6 +393,16 @@ by Louise Bruton</li>
 <li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
 Prototypes</a></li>
 </ul>
+<h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
+<ol>
+<li>code quality</li>
+<li>code review</li>
+</ol>
+<h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
+<ul>
+<li><a href="https://blog.codinghorror.com/code-smells/">Code Smells</a> - by Jeff
+Atwood</li>
+</ul>
 
                     </main>
 
