--- a/print.html
+++ b/print.html
@@ -394,6 +394,16 @@ by Louise Bruton</li>
 <li><a href="https://www.interaction-design.org/literature/topics/prototypes">UI
 Prototypes</a></li>
 </ul>
+<h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
+<ol>
+<li>code quality</li>
+<li>code review</li>
+</ol>
+<h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
+<ul>
+<li><a href="https://blog.codinghorror.com/code-smells/">Code Smells</a> - by Jeff
+Atwood</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
