deploy: 9f3626533a70ea6a0ab17f7547fd3042871a74ac

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ Prototypes</a></li>
 </ul>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
-<li>code quality</li>
+<li><a href="/software-engineering/slides/13_code_quality.html">code quality</a></li>
 <li>code review</li>
 </ol>
 <h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
