--- a/print.html
+++ b/print.html
@@ -403,6 +403,9 @@ Prototypes</a></li>
 <ul>
 <li><a href="https://blog.codinghorror.com/code-smells/">Code Smells</a> - by Jeff
 Atwood</li>
+<li><a href="https://github.com/Droogans/unmaintainable-code">How To Write Unmaintainable
+Code</a> - by Roedy
+Green</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
