--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -402,6 +402,9 @@ Prototypes</a></li>
 <ul>
 <li><a href="https://blog.codinghorror.com/code-smells/">Code Smells</a> - by Jeff
 Atwood</li>
+<li><a href="https://github.com/Droogans/unmaintainable-code">How To Write Unmaintainable
+Code</a> - by Roedy
+Green</li>
 </ul>
 
                     </main>
