deploy: 7272b16de67c624571ee379976003a40a64e3618

--- a/index.html
+++ b/index.html
@@ -405,6 +405,9 @@ Atwood</li>
 <li><a href="https://github.com/Droogans/unmaintainable-code">How To Write Unmaintainable
 Code</a> - by Roedy
 Green</li>
+<li><a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
+Humans</a> - by Philipp
+Hauer</li>
 </ul>
 
                     </main>
