--- a/print.html
+++ b/print.html
@@ -406,6 +406,9 @@ Atwood</li>
 <li><a href="https://github.com/Droogans/unmaintainable-code">How To Write Unmaintainable
 Code</a> - by Roedy
 Green</li>
+<li><a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
+Humans</a> - by Philipp
+Hauer</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
