deploy: 6b557ce652f8b39ca6d04fbeeb800498b6e2a40d

--- a/print.html
+++ b/print.html
@@ -397,7 +397,7 @@ Prototypes</a></li>
 <h2 id="week-9"><a class="header" href="#week-9">week 9</a></h2>
 <ol>
 <li><a href="lectures//software-engineering/slides/13_code_quality.html">code quality</a></li>
-<li>code review</li>
+<li><a href="lectures//software-engineering/slides/14_code_review.html">code review</a></li>
 </ol>
 <h3 id="readings-7"><a class="header" href="#readings-7">readings</a></h3>
 <ul>
