deploy: 3742275c9c7e5f26bb92ad4d63678f5eb0a8d17e

--- a/slides/13_code_quality.html
+++ b/slides/13_code_quality.html
@@ -353,11 +353,17 @@ class <span class="citation" data-cites="atwood2006code">[4]</span>.</p>
 </section>
 <section id="class-based-smells-refused-bequest" class="slide level2">
 <h2>class-based smells: refused bequest</h2>
+<div class="columns">
+<div class="column mt-5" style="width:70%;">
 <blockquote>
 <p>If you inherit from a class, but never use any of the inherited
 functionality, should you really be using inheritance? <span
 class="citation" data-cites="atwood2006code">[4]</span></p>
 </blockquote>
+</div><div class="column" style="width:30%;">
+<p><img data-src="figures/no_middleman.drawio.svg" width="250" /></p>
+</div>
+</div>
 </section>
 <section id="class-based-smells-indecent-exposure" class="slide level2">
 <h2>class-based smells: indecent exposure</h2>
