deploy: 398106057b89b762fec559eeceaf2b4b4397eea5

--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -804,6 +804,22 @@ point covered?</li>
 </div>
 </section>
 
+<section id="how-can-you-tell-if-the-code-matches-the-task"
+class="title-slide slide level1">
+<h1>how can you tell if the code matches the task?</h1>
+<div class="r-stack">
+<p><img data-src="figures/traceability_via_commit_change.drawio.svg"
+width="800" /></p>
+<p><img data-src="figures/traceability_via_commit_parts.drawio.svg"
+class="fragment" data-fragment-index="1" width="800" /></p>
+<p><img
+data-src="figures/traceability_via_commit_message_parts.drawio.svg"
+class="fragment" data-fragment-index="2" width="800" /></p>
+<p><img data-src="figures/traceability_via_commit.drawio.svg"
+class="fragment" data-fragment-index="3" width="800" /></p>
+</div>
+</section>
+
 <section>
 <section id="section-1" class="title-slide slide level1">
 <h1></h1>
