--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -804,6 +804,7 @@ point covered?</li>
 </div>
 </section>
 
+<section>
 <section id="how-can-you-tell-if-the-code-matches-the-task"
 class="title-slide slide level1">
 <h1>how can you tell if the code matches the task?</h1>
@@ -819,7 +820,43 @@ class="fragment" data-fragment-index="2" width="800" /></p>
 class="fragment" data-fragment-index="3" width="800" /></p>
 </div>
 </section>
-
+<section id="how-to-write-the-commit-message" class="slide level2">
+<h2>how to write the commit message?</h2>
+<div class="columns column-gapless">
+<div class="column" style="width:60%;">
+<ol type="1">
+<li>Separate subject from body with a blank line</li>
+<li>Limit the subject line to 50 characters</li>
+<li>Capitalize the subject line</li>
+<li>Do not end the subject line with a period</li>
+<li>Use the imperative mood in the subject line</li>
+<li>Wrap the body at 72 characters
+<ul>
+<li>least important</li>
+</ul></li>
+<li>Use the body to explain what and why not how</li>
+<li><strong>Reference the issue!</strong>
+<ul>
+<li><span class="text-smaller">my addition for traceability</span> <img
+data-src="figures/referenced_issue.png" height="48" /></li>
+</ul></li>
+</ol>
+</div><div class="column" style="width:40%;">
+<figure>
+<img data-src="figures/borrowed/xkcd/git_commit_2x.png"
+alt="Randall Munroe | CC BY-SA 2.5 | source" />
+<figcaption aria-hidden="true">Randall Munroe | <a
+href="https://creativecommons.org/licenses/by-sa/2.5/deed.en">CC BY-SA 2.5</a>
+| <a href="https://xkcd.com/1296/">source</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="text-smaller">
+<p>source: <a href="https://chris.beams.io/posts/git-commit/">How to
+Write a Git Commit Message</a> <span class="citation"
+data-cites="beams2014how">[7]</span></p>
+</div>
+</section></section>
 <section>
 <section id="section-1" class="title-slide slide level1">
 <h1></h1>
@@ -942,6 +979,14 @@ href="
                     " class="uri">
                    https://www.slideshare.net/slideshow/compassionate-yet-candid-code-reviews/113119451
 </a>, 06-Sep-2018.</div>
+</div>
+<div id="ref-beams2014how" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[7] </div><div class="csl-right-inline">C.
+Beams, <span>“How to write a git commit message.”</span> <a href="
+                   https://cbea.ms/git-commit/
+                    " class="uri">
+                   https://cbea.ms/git-commit/
+</a>, 31-Aug-2014.</div>
 </div>
 </div>
 </section>
