deploy: 6635efbc9d7fe1461b4af15acd494bb7e6a375b0

--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -783,6 +783,7 @@ regardless the positive feedback</li>
 </ul>
 </div>
 </section></section>
+<section>
 <section id="a-review-process" class="title-slide slide level1">
 <h1>a review process</h1>
 <div class="columns column-gapless">
@@ -803,11 +804,9 @@ point covered?</li>
 </div>
 </div>
 </section>
-
-<section>
 <section id="how-can-you-tell-if-the-code-matches-the-task"
-class="title-slide slide level1">
-<h1>how can you tell if the code matches the task?</h1>
+class="slide level2">
+<h2>how can you tell if the code matches the task?</h2>
 <div class="r-stack">
 <p><img data-src="figures/traceability_via_commit_change.drawio.svg"
 width="800" /></p>
@@ -857,6 +856,55 @@ Write a Git Commit Message</a> <span class="citation"
 data-cites="beams2014how">[7]</span></p>
 </div>
 </section></section>
+<section id="review-in-numbers" class="title-slide slide level1">
+<h1>review in numbers</h1>
+<div class="columns">
+<div class="column" style="width:75%;">
+<ul>
+<li>don’t review more than 200 to 400 lines of code at a time</li>
+<li>don’t review for more than 60 minutes at a time</li>
+<li>during an inspection session, the rate should be under 500 LOC per
+hour</li>
+<li>use informal reviews
+<ul>
+<li>less effort, although very effective</li>
+</ul></li>
+</ul>
+</div><div class="column" style="width:25%;">
+<p><img
+data-src="figures/publicdomainvectors/software-testing-concept.svg"
+width="300" /></p>
+</div>
+</div>
+<div class="text-smaller">
+<p>source: <span class="citation"
+data-cites="smartbear_best">[8]</span></p>
+</div>
+</section>
+
+<section id="rubber-duck-debugging" class="title-slide slide level1"
+data-visibility="hidden">
+<h1 data-visibility="hidden">rubber duck debugging</h1>
+<div class="columns">
+<div class="column mt-2" style="width:60%;">
+<ul>
+<li>a method of debugging code by articulating a problem in natural
+language</li>
+<li>originates from a story in the book <em>The Pragmatic
+Programmer</em> <span class="citation"
+data-cites="hund2019pragmatic">[9]</span></li>
+<li>in which a programmer explains the code, line by line, to a rubber
+duck</li>
+<li>rationale: teaching / explaining something can provide a deeper
+understanding</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/publicdomainvectors/full-water-bathtub.svg"
+width="300" /></p>
+</div>
+</div>
+</section>
+
 <section>
 <section id="section-1" class="title-slide slide level1">
 <h1></h1>
@@ -987,6 +1035,20 @@ Beams, <span>“How to write a git commit message.”</span> <a href="
                     " class="uri">
                    https://cbea.ms/git-commit/
 </a>, 31-Aug-2014.</div>
+</div>
+<div id="ref-smartbear_best" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[8] </div><div
+class="csl-right-inline">Smartbear, <span>“Best practices for code
+review.”</span> <a href="
+                   https://smartbear.com/learn/code-review/best-practices-for-peer-code-review
+                    " class="uri">
+                   https://smartbear.com/learn/code-review/best-practices-for-peer-code-review
+</a>.</div>
+</div>
+<div id="ref-hund2019pragmatic" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[9] </div><div class="csl-right-inline">A.
+Hunt and D. Thomas, <em>The pragmatic programmer: From journeyman to
+master</em>, 2nd ed. Boston, MA: Addison Wesley, 2019.</div>
 </div>
 </div>
 </section>
