deploy: 759fd27f80d6e38151c95378331298bc2280d60a

--- a/index.html
+++ b/index.html
@@ -408,6 +408,12 @@ Green</li>
 <li><a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
 Humans</a> - by Philipp
 Hauer</li>
+<li><a href="https://mtlynch.io/human-code-reviews-1/">How to Do Code Reviews Like a Human (Part
+One)</a> -by Michael Lynch
+<ul>
+<li><a href="https://mtlynch.io/human-code-reviews-2/">Part Two</a></li>
+</ul>
+</li>
 </ul>
 
                     </main>
