--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -408,6 +408,12 @@ Green</li>
 <li><a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
 Humans</a> - by Philipp
 Hauer</li>
+<li><a href="https://mtlynch.io/human-code-reviews-1/">How to Do Code Reviews Like a Human (Part
+One)</a> -by Michael Lynch
+<ul>
+<li><a href="https://mtlynch.io/human-code-reviews-2/">Part Two</a></li>
+</ul>
+</li>
 </ul>
 
                     </main>
