--- a/print.html
+++ b/print.html
@@ -409,6 +409,12 @@ Green</li>
 <li><a href="https://phauer.com/2018/code-review-guidelines/">Code Review Guidelines for
 Humans</a> - by Philipp
 Hauer</li>
+<li><a href="https://mtlynch.io/human-code-reviews-1/">How to Do Code Reviews Like a Human (Part
+One)</a> -by Michael Lynch
+<ul>
+<li><a href="https://mtlynch.io/human-code-reviews-2/">Part Two</a></li>
+</ul>
+</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
