deploy: fd86d30f7822bb4c9667a2eff5fc7f3058f5333c

--- a/print.html
+++ b/print.html
@@ -473,7 +473,7 @@ mapping</td>
 <tr class="odd">
 <td style="text-align: right;">7</td>
 <td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">clean clode, legacy code, review</td>
+<td style="text-align: center;">wireframing, clean clode</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
@@ -485,13 +485,13 @@ mapping</td>
 <tr class="odd">
 <td style="text-align: right;">9</td>
 <td style="text-align: center;">2024-11-05</td>
-<td style="text-align: center;">testing, review</td>
-<td style="text-align: center;">VCS basics</td>
+<td style="text-align: center;">code quality, code review</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">10</td>
 <td style="text-align: center;">2024-11-12</td>
-<td style="text-align: center;">dependency management</td>
+<td style="text-align: center;">testing, legacy code</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
