deploy: 7fa45e42b13f44510f0573a5d71be6f85d3ecc72

--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -821,23 +821,27 @@ class="fragment" data-fragment-index="3" width="800" /></p>
 </section>
 <section id="how-to-write-the-commit-message" class="slide level2">
 <h2>how to write the commit message?</h2>
-<div class="columns column-gapless">
+<div class="columns">
 <div class="column" style="width:60%;">
 <ol type="1">
 <li>Separate subject from body with a blank line</li>
 <li>Limit the subject line to 50 characters</li>
-<li>Capitalize the subject line</li>
-<li>Do not end the subject line with a period</li>
-<li>Use the imperative mood in the subject line</li>
+<li><strong>Capitalize the subject line</strong></li>
+<li><strong>Do not end the subject line with a period</strong></li>
+<li><strong>Use the imperative mood in the subject line</strong></li>
 <li>Wrap the body at 72 characters
 <ul>
 <li>least important</li>
 </ul></li>
-<li>Use the body to explain what and why not how</li>
+<li><strong>Explain what and why not how</strong></li>
 <li><strong>Reference the issue!</strong>
 <ul>
 <li><span class="text-smaller">my addition for traceability</span> <img
 data-src="figures/referenced_issue.png" height="48" /></li>
+<li><span class="text-smaller"><code>GH-33</code> (GitHub),
+<code>GL-33</code> (GitLab),</span></li>
+<li><span class="text-smaller">or custom identifier for a project (Jira,
+JetBrains)</span></li>
 </ul></li>
 </ol>
 </div><div class="column" style="width:40%;">
