deploy: 0c825b0b401ff9cfd7beb12cbaa458b55443b310

--- a/slides/14_code_review.html
+++ b/slides/14_code_review.html
@@ -847,9 +847,9 @@ JetBrains)</span></li>
 </div><div class="column" style="width:40%;">
 <figure>
 <img data-src="figures/borrowed/xkcd/git_commit_2x.png"
-alt="Randall Munroe | CC BY-SA 2.5 | source" />
+alt="Randall Munroe | CC BY-NC 2.5 | source" />
 <figcaption aria-hidden="true">Randall Munroe | <a
-href="https://creativecommons.org/licenses/by-sa/2.5/deed.en">CC BY-SA 2.5</a>
+href="https://creativecommons.org/licenses/by-nc/2.5/deed.en">CC BY-NC 2.5</a>
 | <a href="https://xkcd.com/1296/">source</a></figcaption>
 </figure>
 </div>
