Enable code line highlighting #33

--- a/assets/custom_header.html
+++ b/assets/custom_header.html
@@ -7,4 +7,4 @@
 <script src="../assets/reveal-drawer-0.1.2/drawer.js"></script>
 <link rel="stylesheet" href="../assets/reveal-drawer-0.1.2/drawer.css"/>
 
-<!-- <script src="../assets/highlight_line.js"></script> -->
+<script src="../assets/highlight_line.js"></script>
