deploy: 87f891f3e402b229f82467141e84ab59b2ab402b

--- a/slides/15_testing.html
+++ b/slides/15_testing.html
@@ -1884,7 +1884,14 @@ class="citation" data-cites="feathers2004working">[19]</span></p>
 <section id="seams" class="slide level2">
 <h2>seams</h2>
 <div class="columns column-gapless">
-<div class="column wide-quote" style="width:75%;">
+<div class="column wide-quote text-smaller" style="width:75%;">
+<blockquote>
+<p>A seam is a place where you can alter behavior in your program
+without editing in that place.</p>
+<p>– Michael Feathers, Working Effectively with Legacy Code: Part I /
+chp. 4 <span class="citation"
+data-cites="feathers2004working">[19]</span></p>
+</blockquote>
 <blockquote>
 <p>A seam is a place in the code that you can insert a modification in
 behavior. […] One way to take advantage of a seam is to insert some sort
@@ -1893,7 +1900,7 @@ of fake.</p>
 href="https://stackoverflow.com/a/15336160/4737417">Stackoverflow</a> |
 CC BY-SA 3.0</p>
 </blockquote>
-<div class="mt-2">
+<div class="mt-1">
 <ul>
 <li>using inheritance
 <ul>
