deploy: ea47e737cb40cf8259358a4305a805d503f22173

--- a/slides/15_testing.html
+++ b/slides/15_testing.html
@@ -142,7 +142,7 @@ class="title-slide slide level1">
 <h1>V model <span class="citation"
 data-cites="forsberg1991relationship">[1]</span></h1>
 <div class="columns column-gapless text-smaller">
-<div class="column mt-5" style="width:50%;">
+<div class="column mt-4" style="width:50%;">
 <ul>
 <li>each phase has output and a <em>review process</em>
 <ul>
@@ -150,6 +150,7 @@ data-cites="forsberg1991relationship">[1]</span></h1>
 <li>decreases the risk of failure</li>
 </ul></li>
 <li>testing is done in a hierarchical perspective</li>
+<li>review is a testing process usually without executing the code</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <p><img data-src="figures/v_model_unit_testing.drawio.svg"
